# sfbs

./: Cargo.toml  module.nix
data/: Cargo.toml  lib.rs
render/: Cargo.toml  index.html
render/src/: main.rs
scripts/: bld.nu  gc.nu  up.nu
sfbs/: Cargo.toml  main.rs
src/: main.rs
