[package]
name = "sfbs"
description = "Sysflake build status"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sfbs"
path = "main.rs"

[dependencies]
data = { version = "0.1.0", path = "../data" }
nix-compat = { git = "https://github.com/tvlfyi/tvix/", version = "0.1.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structstruck = "0.5.0"
